添加后台常驻服务,每5分钟查看新消息和推送.在设置页面添加开关.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -147,6 +147,10 @@
             android:name="UMENG_CHANNEL"
             android:value="${CHANNEL_NAME}" />
 
+        <service
+            android:name=".MessagePushService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
