细化通知信息,类似消息中心效果

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -150,7 +150,9 @@
         <service
             android:name=".MessagePushService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
+
+        <receiver android:name=".MessagePushService$NotificationReceiver"/>
     </application>
 
 </manifest>
